Update on Overleaf.

--- a/Refs2021.bib
+++ b/Refs2021.bib
@@ -13,6 +13,30 @@
   year =          {2021},
 }
 
+@Manual{McLeod_2011,
+    author = {McLeod, A. I.},
+    title = {Kendall: Kendall rank correlation and Mann-Kendall trend test},
+    year = {2011},
+    note = {R package version 2.2},
+    url = {https://CRAN.R-project.org/package=Kendall},
+  }
+
+@Manual{Bronaugh_Werner_2019,
+    author = {Bronaugh, D. and Werner, A.},
+    title = {zyp: Zhang + Yue-Pilon Trends Package},
+    year = {2019},
+    note = {R package version 0.10-1.1},
+    url = {https://CRAN.R-project.org/package=zyp},
+  }
+
+@Manual{Canty_Ripley_2021,
+    author = {Canty, A. and Ripley, B. D.},
+    title = {boot: Bootstrap R (S-Plus) Functions},
+    year = {2021},
+    note = {R package version 1.3-28},
+  }
+
+
 @techreport{CEIP2021,
   author =        {Pinterits, M. and Ullrich, B. and Wankm\"uller, R. and
                    Mareckova, K.},
@@ -2131,3 +2155,46 @@
   title = {pyMannKendall: a python package for non parametric Mann Kendall family of trend tests.},
   journal = {Journal of Open Source Software}
 }
+
+@Article{Oikonomakis2018,
+  author               = {Oikonomakis, Emmanouil and Aksoyoglu, Sebnem and Ciarelli, Giancarlo and Baltensperger, Urs and Prevot, Andre Stephan Henry},
+  title                = {{Low modeled ozone production suggests underestimation of precursor emissions (especially NOx) in Europe}},
+  journal              = acp,
+  year                 = 2018,
+  volume               = 18,
+  number               = 3,
+  pages                = {{2175-2198}},
+  month                = {{FEB 14}},
+  issn                 = {{1680-7316}},
+  file                 = {:Oikonomakis-LNOx-acp-2017-713ns.pdf:PDF},
+  keywords = {QQEMIS,QQNOX},
+  doi                  = {{10.5194/acp-18-2175-2018}},
+  eissn                = {{1680-7324}}, 
+  orcid-numbers        = {{Prevot, Andre/0000-0002-9243-8194 Aksoyoglu, Sebnem/0000-0002-5356-5633}},
+  researcherid-numbers = {{Prevot, Andre/C-6677-2008 Aksoyoglu, Sebnem/C-7730-2009}},
+  unique-id            = {{ISI:000425160800005}}
+}
+
+@Article{SofievTuovinen,
+  author  = {M. Sofiev and J.-P. Tuovinen},
+  title   = {Factors determining the robustness of {AOT40} and other ozone exposure indices},
+  journal = AE,
+  year    = {2001},
+  volume  = {35},
+  pages   = {3521-3528},
+  file    = {:SofievTuovinenAE2001.pdf:PDF},
+}
+
+@Article{Etzold:2020,
+  author   = {Sophia Etzold and Marco Ferretti and Gert Jan Reinds and Svein Solberg and Arthur Gessler and Peter Waldner and Marcus Schaub and David Simpson and Sue Benham and Karin Hansen and Morten Ingerslev and Mathieu Jonard and Per Erik Karlsson and Antti-Jussi Lindroos and Aldo Marchetto and Miklos Manninger and Henning Meesenburg and Päivi Merilä and Pekka Nöjd and Pasi Rautio and Tanja G.M. Sanders and Walter Seidling and Mitja Skudnik and Anne Thimonier and Arne Verstraeten and Lars Vesterdal and Monika Vejpustkova and Wim de Vries},
+  title    = {{Nitrogen deposition is the most important environmental driver of growth of pure, even-aged and managed European forests}},
+  journal  = {Forest Ecology and Management},
+  year     = 2020,
+  volume   = 458,
+  pages    = {117762},
+  issn     = {0378-1127},
+   doi      = {https://doi.org/10.1016/j.foreco.2019.117762},
+    keywords = {Air pollution, Climate change, Forest management, ICP Forests, Observational study, Ozone, Statistical modelling,QQDS,QQEMEP},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0378112719304244},
+}
+
