--- a/chapterEmis2019.tex
+++ b/chapterEmis2019.tex
@@ -115,7 +115,7 @@ To improve the quality of the input data for air quality models, and following a
 
 CEIP in co-operation with TNO prepared a list of Parties where it could be assumed with a good degree of certainty that the condensable component is mostly included in PM emissions for GNFR sector C. The analysis focused on small scale combustion. This analysis was based on (a) the calculation of Implied Emission Factors (emission divided by the reported activity data), (b) the fuel mix of the Party, (c) the information provided in the Informative Inventory Report and (d) in a few cases direct information from Parties (received via e-mail).
 
-The analysis resulted in a list of Parties where the conclusion was that the PM emission data reported by the Party should be used as the condensable component seemed to be included. For other Parties the TNO REF2 data were used. In a few cases data that had been gap-filled by CEIP was used for the respective Country as no REF2 estimate was available (see table~\ref{tab:CEIP1}).
+The analysis resulted in a list of Parties where the conclusion was that the PM emission data reported by the Party should be used as the condensable component seemed to be included. For other Parties the TNO REF2 data were used. In a few cases data that had been gap-filled by CEIP was used for the respective Party no REF2 estimate was available (see table~\ref{tab:CEIP1}).
 
 
 
@@ -148,7 +148,7 @@ The 5 selected countries were chosen because of feedback received or discussions
 
 
 Figure~\ref{fig:CEIP3} shows the different REF2 emission estimates. The year 2010 is the original REF2 estimate, while 2015\_scaled represents the scaled REF2 to the year 2015 using the official reported data (used in the 2020 EMEP modelling). The estimate 2015\_scaled\_adjusted is the updated version described here, where for 5 selected countries in the original REF2 data have been revised based on new information (REF2.1).
-From the figure, it can be seen that the 2015 emissions are lower than 2010 for almost all countries. This is p-artly the result of technological advancements in countries (replacement of older stoves with new ones), but also largely related to the fact that 2010 was a relatively cold year in Europe, hence with higher emissions from the residential sector compared to other years. The figure also shows that for the five countries that have been adjusted in the latest update, in each case the REF2.1 emission including condensables is corrected downward. This adjusted REF2.1 is, however, still considerably higher than reported emission for each of these countries.
+From the figure, it can be seen that the 2015 emissions are lower than 2010 for almost all countries. This is p-artly the result of technological advancements in countries (replacement of older stoves with new ones), but also largely related to the fact that 2010 was a relatively cold year in Europe, hence with higher emissions from the residential sector compared to other years. The figure also shows that for the five countries that have been adjusted in the latest update, in each case the REF2.1 emissions including condensables is corrected downward. This adjusted REF2.1 is, however, still considerably higher than reported emission for each of these countries.
 
 \section{Gothenburg Protocol targets}
 \label{sec:GP}
@@ -158,10 +158,7 @@ The 1999 Gothenburg Protocol (GP) lists emission reduction commitments of  \nox,
 
 In 2012, the Executive Body of the LRTAP Convention decided that adjustments to inventories may be applied in some circumstances (\cite{UNECE2012}). From 2014 to 2021, adjustment applications of ten countries (Belgium, Czechia, Denmark, Finland, France, Hungary, Germany, the Netherlands, Luxembourg, Spain and the United Kingdom) have been accepted by expert review team and therefore these approved adjustments have to be subtracted for the respective countries when compared with the targets. In April 2021, Czechia and France  submitted  new adjustment applications; the \nhiii adjustment application  of Czechia was rejected by the review team and application from France has been accepted.     
 
-Further, the reporting guidelines (\cite{UNECE2014}) specify that some Parties within the EMEP region (i.e. Austria, Belgium, Ireland, Lithuania, Luxembourg, the Netherlands, Switzerland, the United Kingdom of Great Britain and Northern Ireland) {\it may choose to use the national emission total calculated on the basis of fuels used} in the geographic area of the Party as a basis for compliance with their respective emission ceilings.
-
-However, when considering only reported data, approved adjustments and fuel used data of the respective countries, Figure~\ref{fig:CEIP4} indicates that in the year 2019 North Macedonia could not reduce their \sox emissions below their respective Gothenburg Protocol requirements, and that Croatia and Spain are above their 1999 Gothenburg Protocol ceilings concerning \nhiii. For \nox and NMVOC all countries were below their individual ceilings in year 2019.
-
+Further, the reporting guidelines (\cite{UNECE2014}) specify that some Parties within the EMEP region (i.e. Austria, Belgium, Ireland, Lithuania, Luxembourg, the Netherlands, Swit-zerland, the United Kingdom of Great Britain and Northern Ireland) {\it may choose to use the national emission total calculated on the basis of fuels used} in the geographic area of the Party as a basis for compliance with their respective emission ceilings.
 
 \begin{figure}[h]
 \centering
@@ -173,7 +170,7 @@ Approved adjustments are considered for  Denmark (NMVOCs, \nhiii), Finland (\nhi
 \label{fig:CEIP4}
 \end{figure}
 
-
+However, when considering only reported data, approved adjustments and fuel used data of the respective countries, Figure~\ref{fig:CEIP4} indicates that in the year 2019 North Macedonia could not reduce their \sox emissions below their respective Gothenburg Protocol requirements, and that Croatia and Spain are above their 1999 Gothenburg Protocol ceilings concerning \nhiii. For \nox and NMVOC all countries were below their individual ceilings in year 2019.
 
 
 
@@ -261,13 +258,6 @@ To clarify, the reader is reminded that these analyses are based on the emission
 \label{fig:CEIP6}
 \end{figure}
 
-\begin{figure}[h]
-\centering
-{\includegraphics*[viewport=1 1 565 565,clip,width=0.65\linewidth]{FIGS_CEIP/Fig7.pdf}}
-\caption{GNFR sector contribution to national total emissions in 2019
-  for the EMEP West and EMEP East areas. Asian areas, North Africa and the sea regions are not included.}
-\label{fig:CEIP7}
-\end{figure}
 
 It is evident that the combustion of fossil fuels is responsible for a significant part of all emissions. For \nox emissions, the largest contributions come from transport (sector F, 40\%) and from large power plants (sector A, 21\%).
 
@@ -286,6 +276,13 @@ Finally, the most important contributors to BC emissions are 'F - Road transport
 Figure \ref{fig:CEIP7} illustrates the
 sector contributions to the sum of total emissions in the EMEP West
 region and the EMEP East region. The split between the EMEP West and EMEP East regions is according to  \url{https://www.ceip.at/countries} (sea regions, North Africa and the remaining Asian areas are excluded, with the Aral Lake area assigned to EMEP East). The comparison of both graphs highlights some significant differences between West and East. 
+\begin{figure}[h]
+\centering
+{\includegraphics*[viewport=1 1 565 565,clip,width=0.65\linewidth]{FIGS_CEIP/Fig7.pdf}}
+\caption{GNFR sector contribution to national total emissions in 2019
+  for the EMEP West and EMEP East areas. Asian areas, North Africa and the sea regions are not included.}
+\label{fig:CEIP7}
+\end{figure}
 
 For \nox in both the EMEP West and EMEP East regions the most important sector is 'F - Road transport emissions' (38\% and 34\%, respectively), although it is worth noting the higher contribution from  'A - Public electricity and heat production'  in the East region (23\%).
 
@@ -325,11 +322,11 @@ EMEP East area sector 'B - Industry combustion' is of higher importance. For PM$
 The following trend analyses are based on the emissions data in the EMEP datasets for modellers, i.e. data based largely on reported emissions, but also compiled with independent emissions estimates for countries and regions where data are not reported or the reported data have been omitted due to quality issues.
 
 Excluding shipping emissions in the sea regions (these are summarised in the following subchapter), the trend analyses of total emissions from the non-sea areas in the EMEP domain\footnote{The EMEP domain covers the geographic area between 30{\degrees} N-82{\degrees} N latitude and 30{\degrees} 
-  W-90{\degrees} E longitude.} show that emissions of seven of the nine pollutants have decreased overall since 2000 Figure~\ref{fig:CEIP8}). Only the 2019 PM$_{coarse}$  and \nhiii emissions have increased (by 6 and 12\%, respectively) since 2000. The 2019 emissions of \sox are 69\% of the respective 2000 emissions. While the 2019 emissions of CO, NMVOC, \nox, PM$_{2.5}$, PM$_{10}$ and BC are all lower than respective emissions in 2000 (1-10\% lower), it is interesting to note that emissions of these pollutants have been increasing since ca. 2014.
+  W-90{\degrees} E longitude.} in Figure~\ref{fig:CEIP8} show that emissions of seven of the nine pollutants have decreased overall since 2000. Only the 2019 PM$_{coarse}$  and \nhiii emissions have increased (by 6 and 12\%, respectively) since 2000. The 2019 emissions of \sox are 69\% of the respective 2000 emissions. While the 2019 emissions of CO, NMVOC, \nox, PM$_{2.5}$, PM$_{10}$ and BC are all lower than respective emissions in 2000 (1-10\% lower), it is interesting to note that emissions of these pollutants have been increasing since ca. 2014.
 
 Despite these overall trends, assessment shows that regional emission developments seem to follow strongly different patterns (Figure~\ref{fig:CEIP9}). While emissions of all the pollutants in the EMEP West countries are clearly decreasing, emissions of all pollutants in the EMEP East countries of the EMEP domain have been somewhat stable (albeit gradually decreasing for most pollutants) over the 2000-2019 period. For the Other Land Areas (North Africa and the remaining Asian areas, emissions are clearly on the rise.
 
-Of course it is not just the emission trends that separate the three land regions. Whereas the emission trends of the EMEP West countries are based to a very large extent on the official national inventories reported to CEIP, the countries of the Other Land Areas within the EMEP domain (North Africa, remaining Asian areas) are not Parties to the Convention and thus are not obliged to report their emissions. For these regions, emissions are based completely on the independent gridded emission estimates of the EDGAR v5.0 dataset \citep{EDGARv50} that was generated by the European Commission's Joint Research Centre (JRC). For the EMEP East region, again not all countries are Parties to the Convention (Turkmenistan, Tajikistan and Uzbekistan) and reported Russian emissions do not cover the region of Russia within the EMEP domain that is ca. east of the Urals. Emissions for the area of the Aral Lake are also not reported by any Convention country. Note that the emissions for the eastern part of Russia and the Aral Lake have also been gap-filled using the independent gridded emission estimates of the EDGAR v5.0 dataset. Finally, it should be noted that many of the emissions time series for the EMEP East countries that are Parties have been partially or fully replaced with independent estimates from the ECLIPSE v6b\footnote{\url{https://iiasa.ac.at/web/home/research/researchPrograms/air/ECLIPSEv6.html}} dataset that has been compiled by IIASA using their GAINS model  \citep{Amann_et_al:2011}.
+Of course it is not just the emission trends that separate the three land regions. Whereas the emission trends of the EMEP West countries are based to a very large extent on the official national inventories reported to CEIP, the countries of the Other Land Areas within the EMEP domain (North Africa, remaining Asian areas) are not Parties to the Convention and thus are not obliged to report their emissions. For these regions, emissions are based completely on the independent gridded emission estimates of the EDGAR v5.0 dataset \citep{EDGARv50}. For the EMEP East region, again not all countries are Parties to the Convention (Turkmenistan, Tajikistan and Uzbekistan) and reported Russian emissions do not cover the region of Russia within the EMEP domain that is ca. east of the Urals. Emissions for the area of the Aral Lake are also not reported by any Convention country. Note that the emissions for the eastern part of Russia and the Aral Lake have also been gap-filled using the independent gridded emission estimates of the EDGAR v5.0 dataset. Finally, it should be noted that many of the emissions time series for the EMEP East countries that are Parties have been partially or fully replaced with independent estimates from the ECLIPSE v6b\footnote{\url{https://iiasa.ac.at/web/home/research/researchPrograms/air/ECLIPSEv6.html}} dataset that has been compiled by IIASA using their GAINS model  \citep{Amann_et_al:2011}.
 %An overview of the Parties and pollutants for which replacement and gap-filling was required is given in Appendix 2.
 
 
@@ -338,10 +335,7 @@ Non-sea emission levels in the geographic EMEP domain for 2019 of the individual
 The assessment of emission levels in individual countries and areas show an increase of emissions in 2019 compared to 2000 emission levels in several countries or areas.
 
 
-In case of PM emissions, 24 countries/areas have higher PM$_{coarse}$ emissions in 2019 than in 2000, while PM$_{10}$ and PM$_{2.5}$ emissions increased in 17 and 16 countries/areas, respectively. In case of \nox and \sox there are 14  countries/areas, NMVOC 13, \nhiii 18 and CO 12
-countries/areas with higher emissions in 2019 than in year 2000. Detailed explanatory information on emission trends for the reporting countries should be provided in the respective informative inventory reports (IIRs). Tables~\ref{tab:CEIP3}-\ref{tab:CEIP3} continued indicates whether the emissions were based completely  (R) or partially (r) on reported data. 
-
-\begin{table}
+\begin{table}{}
   \caption{Differences between emissions for 2000 and 2019 (based on gap--filled data as used in EMEP models). Negative values mean that 2019 emissions were lower than 2000 emissions. Red/blue coloured data indicates that 2019 emissions were higher/lower than 2000 emissions. Furthermore, the symbol in parentheses indicate whether the emissions times series are completely based on reported data (R), are partially based on reported data (r), or have been completely replaced/gap-filled (-).}
 \centering
 {\includegraphics*[viewport=45 100 535 735,clip,width=0.99\textwidth]{FIGS_CEIP/Table3_page1.pdf}}
@@ -354,6 +348,9 @@ countries/areas with higher emissions in 2019 than in year 2000. Detailed explan
 {\includegraphics*[viewport=45 520 535 735,clip,width=0.99\textwidth]{FIGS_CEIP/Table3_page2.pdf}}
 \label{tab:CEIP3contd}  
 \end{table}
+
+In case of PM emissions, 24 countries/areas have higher PM$_{coarse}$ emissions in 2019 than in 2000, while PM$_{10}$ and PM$_{2.5}$ emissions increased in 17 and 16 countries/areas, respectively. In case of \nox and \sox there are 14  countries/areas, NMVOC 13, \nhiii 18 and CO 12
+countries/areas with higher emissions in 2019 than in year 2000. Detailed explanatory information on emission trends for the reporting countries should be provided in the respective informative inventory reports (IIRs). Tables~\ref{tab:CEIP3}-\ref{tab:CEIP3} continued indicates whether the emissions were based completely  (R) or partially (r) on reported data. 
 
 %% CEIP included again a summary of increase/decrease by pollutant here, which I (Agnes) did not include because it has no additional value
 %% whatsoever. All info can be found in the table and the text before. I thought we agreed not to write this part anymore. 
