--- a/chapterIntro.tex
+++ b/chapterIntro.tex
@@ -548,7 +548,7 @@ Geoscientific Model Development ; 2020; 13.(4) ; p. 1787-1807
 DOI: 10.5194/gmd-13-1787-2020 
 
 \item[]
-Simpson, David; Bergström, Robert; Briolat, Alan; Imhof, Hannah; Johansson, John; Priestley, Micha-el;
+Simpson, David; Bergström, Robert; Briolat, Alan; Imhof, Hannah; Johansson, John; Priestley, Michael;
 Valdebenito Bustamante, Alvaro Moises.
 GenChem v1.0 – a chemical pre-processing and testing system for atmospheric modelling.
 Geoscientific Model Development 2020 ; 13. p. 6447-6465
@@ -675,7 +675,7 @@ Katarina Mareckova, Robert Wankmueller, Marion Pinterits, Bernhard Ullrich and S
 
  \item[]
  Heiko Klein, Michael Gauss, \'Agnes  Ny\'{\i}ri, Svetlana Tsyro, Hilde Fagerli and Peter Wind. 
-Transboundary air pollution by sulphur, nitrogen, ozone and particulate matter in 2018, Country Reports. EMEP/MSC-W Data Note 1/2020
+Transboundary air pollution by sulphur, nitrogen, ozone and particulate matter in 2019, Country Reports. EMEP/MSC-W Data Note 1/2021
 
 
  \end{list}
