--- a/ExSummary.tex
+++ b/ExSummary.tex
@@ -24,23 +24,30 @@ In addition, 56 sites from 21 Parties reported at least one of the components re
 
 The mean daily max O$_3$, SOMO35 and AOT40 all show a distinct gradient with levels increasing from north to south, a well established feature for ozone reflecting the dependency of ozone on the photochemical conditions. The geographical pattern in the measured values is fairly well reflected by the model results for all these three metrics. Peak levels of surface O$_3$ were high in 2019 and this was linked to extreme heat waves in June and July. The national temperature records were broken in France, United Kingdom and Germany this year and associated with these episodes very high ozone levels were observed. Some stations registered the highest peak ozone levels since the mid 1990s. Many countries reported levels above EU's information threshold (180 \ug) and some even above the alert threshold (240 \ug). This confirms the strong link between weather conditions and surface ozone and is a signal that future climate change could have a substantial influence on the frequency and intensity of ozone episodes in Europe.
 
-%Svetlana & Wenche update:
-PM pollution was rather moderate in 2018, in particular in Central, Western and Southern Europe (10-30\% lower compared to the 18-year average) due to the relatively mild winter and more precipitation. Only in Turkey, the Caucasus region, Ukraine, the Baltic countries and southern parts of Finland and Sweden, \PM[10] and \PM[2.5] levels were higher. 
-EMEP MSC-W model calculations and EMEP observations show a general increase of annual mean \PM[10] and \PM[2.5] over land from north to south, with concentrations being below 2-5 \ug in Northern
-Europe and increasing to 5-15 \ug in the mid-latitudes and further south.
+%Svetlana & Wenche update: Updated 31.8.2021
+Overall, the year of 2019 was quite moderate with respect to PM air pollution in Europe, which was due to dominating meteorological conditions with a mild winter and excessive precipitation in the cold seasons (especially autumn) in many parts of Europe. In addition, the spring/summer period was (with some exceptions) relatively warm which favoured evaporation of semi-volatile inorganic and organic aerosols.
+The results from the EMEP MSC-W model simulations and the observations show general increase of the annual mean levels of \PM[10] and \PM[2.5] over land from north to south. The regional background concentrations are below 2-5 \ug in Northern Europe, increasing to 5-15 \ug in the mid-latitudes and further south. The annual mean \PM[10] are in excess of 20 \ug in the Po Valley and on Cyprus. The observations also show \PM[10] concentrations above 20 \ug in Slovakia. \PM[2.5] concentrations are below 10 \ug over most of EMEP domain, or otherwise between 10 and 15 \ug in parts of Benelux, Poland, Hungary and some of Balkan countries. Furthermore, the model calculates high PM for the regions east of the Caspian Sea and over the southern Mediterranean, with annual mean concentrations in excess of 50 \ug due to windblown dust from the arid soils and deserts. There is a good general agreement between the modelled and observed distributions of annual mean \PM[10] and \PM[2.5], with correlation coefficients of 0.60 and 0.72, respectively. Overall, the model underestimates the observed annual mean of \PM[10] by 12\% and \PM[2.5] by 13\% .
+
+Much rain in November-December combined with the mild winter temperatures resulted in the absence of major PM episodes in 2019 typical for Europe in winters. Model results and EMEP observational data show that the annual mean regional background \PM[10] concentrations were below the EU limit value of 40 \ug for all of Europe in 2019. The model calculates annual mean \PM[10] above the WHO recommended AQG of 20 \ug for only small regions in the Po Valley and western Turkey. The highest observed annual mean \PM[10], exceeding the AQG of 20 \ug, were only registered at two Slovakian and one Greek site. Further, the joint model and observational results show that annual mean regional background \PM[2.5] concentrations in 2019 were below the EU limit value of 25 \ug (except in the Po Valley according to the model). However, there were observed cases of exceedance of the WHO AQG value of 10 \ug at nine sites, with the highest values at the Hungarian site HU0004 with 16 \ug, followed by German DE0044 with 14 \ug and Italian IT0004 with 13 \ug. Overall, considerable fewer days with PM exceedances have been observed and modelled for EMEP sites for 2019. \PM[10] daily concentrations in excess of 50 \ug were observed at 31 out of 67 sites in 2019, but no violations of the \PM[10] EU limit value (more than 35 exceedance days) were registered. Still, 12 sites had more than 3 exceedance days recommended by WHO AQG’s (with the highest number of observed exceedance days being 7 at DE0001 and 6 at LV0010 and RS0005). Regional background \PM[2.5] concentrations exceeded the WHO AQG recommended limit of 25 \ug at 37 out of 51 stations in 2019. Among those, at 21 sites the number of exceedance days were more than 3 (the recommended limit according to WHO AQG).  The highest number of exceedance days was 40 at HU0002 and IT0004, followed by 30, 26 and 24 at DE0044, PL0005 and AT0002, respectively. Most of the exceedances registered at the central European sites occurred during the winter and in the spring, while rather few exceedances occurred in the wet autumn of 2019. By contrast, at the Mediterranean sites the exceedances were more frequent during summer. PM exceedances simulated by the EMEP MSC-W model correspond in general quite well with the EMEP observations, with some model’s tendency of underestimating the occurrence of exceedances for Central European sites, while overestimating those for some of the Mediterranean sites heavily influenced by desert dust.
+
+
+
+%PM pollution was rather moderate in 2018, in particular in Central, Western and Southern Europe (10-30\% lower compared to the 18-year average) due to the relatively mild winter and more precipitation. Only in Turkey, the Caucasus region, Ukraine, the Baltic countries and southern parts of Finland and Sweden, \PM[10] and \PM[2.5] levels were higher. 
+%EMEP MSC-W model calculations and EMEP observations show a general increase of annual mean \PM[10] and \PM[2.5] over land from north to south, with concentrations being below 2-5 \ug in Northern
+%Europe and increasing to 5-15 \ug in the mid-latitudes and further south.
 %, with \PM[2.5] levels being somewhat lower than those of \PM[10]. 
-The distribution of the regional background PM is fairly homogeneous over most of Central and Western Europe, with somewhat elevated \PM[10] levels of 15-20 \ug in the Po Valley and the Benelux. The observations also show elevated \PM[10] concentrations in Poland, Czechia and Hungary, while the model calculates high PM for the regions east of the Caspian Sea and over the southern Mediterranean (heavily influenced by Saharan dust). 
+%The distribution of the regional background PM is fairly homogeneous over most of Central and Western Europe, with somewhat elevated \PM[10] levels of 15-20 \ug in the Po Valley and the Benelux. The observations also show elevated \PM[10] concentrations in Poland, Czechia and Hungary, while the model calculates high PM for the regions east of the Caspian Sea and over the southern Mediterranean (heavily influenced by Saharan dust). 
 
-There is good agreement between the modelled and observed \PM[10] and \PM[2.5], with annual mean model biases of -22\% and -14\% and correlation coefficients of 0.66 and 0.81, respectively.
+%There is good agreement between the modelled and observed \PM[10] and \PM[2.5], with annual mean model biases of -22\% and -14\% and correlation coefficients of 0.66 and 0.81, respectively.
 
-Model results and EMEP observational data show that the annual mean regional background \PM[10] concentrations were below the EU limit value of 40 \ug in Europe in 2018, but some exceedances of the WHO recommended AQG of 20 \ug occurred. 
-The annual mean \PM[2.5] concentrations in 2018 were below the EU limit value of 25 \ug (except modelled \PM[2.5] for the Po Valley). However, exceedances of the WHO AQG value of 10 \ug by annual mean \PM[2.5] were observed at seventeen sites.%, with the highest values registered in Hungary (16 \ug at HU0003 and 15.5 \ug at HU0002).
+%Model results and EMEP observational data show that the annual mean regional background \PM[10] concentrations were below the EU limit value of 40 \ug in Europe in 2018, but some exceedances of the WHO recommended AQG of 20 \ug occurred. 
+%The annual mean \PM[2.5] concentrations in 2018 were below the EU limit value of 25 \ug (except modelled \PM[2.5] for the Po Valley). However, exceedances of the WHO AQG value of 10 \ug by annual mean \PM[2.5] were observed at seventeen sites.%, with the highest values registered in Hungary (16 \ug at HU0003 and 15.5 \ug at HU0002).
 
-Out of the 62 sites, days with \PM[10] exceedances of 50 \ug were observed at 36, but in all cases with fewer than the upper EU-limit of 35 days per year registered. Still, 18 sites had more than 3 exceedance days (the upper limit recommended by the WHO AQGs). %The highest numbers of days with observed exceedances of \PM[10] were 25 at CY0002 and SK0007, and 17 at CZ0003. 
-Daily mean \PM[2.5] concentrations exceeded the WHO AQG recommended of value 25 \ug at 31 out of 41 stations in 2018. Among those, at 21 sites the number of exceedance days were more than 3 (the recommended limit according to WHO AQG).  
-The modelled numbers of exceedance days in 2018 show in general a good correspondence with the observations, with somewhat better agreement for \PM[10] than for \PM[2.5]. The model has a tendency of underestimating the frequency of exceedance days at some Central European sites
-and overestimating at some Mediterranean sites. 
-The majority of PM exceedances occurred during the winter and autumn 2018 at Central European sites, whereas during the summer at the Mediterranean sites. Remarkably, the largest number of \PM[2.5] exceedances at three out of four German sites occurred in spring, while much fewer occurred during the cold seasons.
+%Out of the 62 sites, days with \PM[10] exceedances of 50 \ug were observed at 36, but in all cases with fewer than the upper EU-limit of 35 days per year registered. Still, 18 sites had more than 3 exceedance days (the upper limit recommended by the WHO AQGs). %The highest numbers of days with observed exceedances of \PM[10] were 25 at CY0002 and SK0007, and 17 at CZ0003. 
+%Daily mean \PM[2.5] concentrations exceeded the WHO AQG recommended of value 25 \ug at 31 out of 41 stations in 2018. Among those, at 21 sites the number of exceedance days were more than 3 (the recommended limit according to WHO AQG).  
+%The modelled numbers of exceedance days in 2018 show in general a good correspondence with the observations, with somewhat better agreement for \PM[10] than for \PM[2.5]. The model has a tendency of underestimating the frequency of exceedance days at some Central European sites
+%and overestimating at some Mediterranean sites. 
+%The majority of PM exceedances occurred during the winter and autumn 2018 at Central European sites, whereas during the summer at the Mediterranean sites. Remarkably, the largest number of \PM[2.5] exceedances at three out of four German sites occurred in spring, while much fewer occurred during the cold seasons.
 
 
 
@@ -87,12 +94,14 @@ In 2021, CEIP in co-operation with TNO prepared a list of Parties where it could
 \subsubsection*{Trends in air pollution 2000-2019}
 In December 2019, the Executive Body launched the review of the Gothenburg Protocol as amended in 2012. In order to support the review and assess the progress made towards achieving the environmental and health objectives of the Protocol, we present an assessment of the trends in air pollution in Europe for the period 2000-2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations.
 We analyze trends in air concentrations for ozone, sulphur dioxide, particulate matter (and their species; sulphate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulphur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO guideline values for PM$_{2.5}$, AOT40 for forests and crops, and exceedances of critical loads for acidification and eutrophication for every 5 year since 2000).
+%Note on validity Hilde
+Unfortunately, the EMEP observational network is dominated by sites in the western part of the EMEP domain and has hardly any coverage in the EECCA and western Balkan area. Therefore, the assessment discussed below is only valid for a part of the EMEP domain. Furthermore, the developments of emissions in the western and eastern part of the EMEP domain have followed different patterns, with clear decreases of most pollutants in the western countries but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000-2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part of the domain. Note also, that the uncertainties related to emissions and their trends in the eastern countries are large.
 
 %SOX: Wenche
-The SO$_x$ emissions in the EU27+UK+EFTA countries have declined by more than 80\% (-4.3\% yr$^{-1}$) the last two decades. This is reflected in both the observed and modelled trends for all the atmospheric sulfur components. The average total reductions in observations for the last 20 years (2000-2019) are 74\%, 61\% and 60\% for \soii, \soiv in aerosols and in wet deposition respectively, while the trends in model calculations are somewhat higher: 97\%, 72\% and 81\%, respectively
+The SO$_x$ emissions in the EU27+UK+EFTA countries have declined by more than 80\% (-4.3\% yr$^{-1}$) the last two decades. This is reflected in both the observed and modelled trends for all the atmospheric sulfur components. The average total reductions in observations for the last 20 years (2000--2019) are 74\%, 61\% and 60\% for \soii, \soiv in aerosols and in wet deposition respectively, while the trends in model calculations are somewhat higher: 97\%, 72\% and 81\%, respectively.
 
 %NOx Hilde
-We find that oxidized nitrogen in precipitation and in air (NO$_2$, HNO$_3$, NO$_3^{-}$ aerosol and the sum of HNO$_3$ and NO$_3^{-}$ aerosol) has been decreasing since 2000. However, the decrease in the observations (-24\%, 1.2\% yr$^{-1}$) for NO$_2$ and for wet deposition of oxidized nitrogen (-26\%, -1.4\% yr$^{-1}$) are smaller than in model calculations (-42\%, -2.2\% yr$^{-1}$ for NO$_2$) and -40\% (-2.3\% yr$^{-1}$) for wet deposition of oxidized nitrogen  and emissions (-48\% for EU27+UK+EFTA countries) for 2000--2019.
+We find that oxidized nitrogen in precipitation and in air (NO$_2$, HNO$_3$, NO$_3^{-}$ aerosol and the sum of HNO$_3$ and NO$_3^{-}$ aerosol) has been decreasing since 2000. However, the decrease in the observations (-24\%, 1.2\% yr$^{-1}$) for NO$_2$ and for wet deposition of oxidized nitrogen (-26\%, -1.4\% yr$^{-1}$) are smaller than in model calculations (-42\%, -2.2\% yr$^{-1}$ for NO$_2$) and -40\% (-2.3\% yr$^{-1}$) for wet deposition of oxidized nitrogen and emissions (-48\% for EU27+UK+EFTA countries) for 2000--2019.
 
 %redN Hilde 
 For reduced nitrogen, the observations and the model calculations confirm that very small reductions of ammonia emissions have been achieved during the 2000--2019 period. 
@@ -101,7 +110,7 @@ Total ammonium (NH$_3$ + NH$_4$) in air show larger negative changes of about -1
 
 These large differences between the changes found for the different reduced nitrogen components can be explained by the interaction of ammonia with the sulphur and nitrogen components. It can be noted that the results imply that the contribution of ammonia emission to aerosols have been largely reduced during the 2000--2019 period, due to the impact of SO$_x$ and NO$_x$ emission reductions. 
 
-\QUERY{PM: Svetlana}
+\QUERY{PM and exceedances of WHO guideline values for PM$_{2.5}$: Svetlana}
 
 
 %OC and EC and 'do the organic fraction increase?': David & Karl Espen
@@ -122,8 +131,7 @@ Comparison of trends in measured and modelled VOCs is not included in this repor
 
 %Exceedances of critical loads Hilde
 
-%Note on validity Hilde
-Unfortunately, the EMEP observational network is dominated by sites in the western part of the EMEP domain and has hardly any coverage in the EECCA and western Balkan area. Therefore, the assessment discussed in above is only valid for a part of the EMEP domain. Furthermore, the development of emissions in the western and eastern part of the EMEP domain follow different patterns, with clear decreases of all pollutants in the western countries  but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000-2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part of the domain. Note however, that the uncertainties related to emissions and their trends in the eastern countries are large.
+
 
 
 
